@@ -1,3 +1,7 @@
+7 February 2014: Wouter
+	- Fix #551: change Regent to Copyright holder in the LICENSE,
+	  to match the definition on opensource.org for the BSD License.
+
 27 January 2014: Matthijs
 	- nsid can be set with "ascii_somestring" in ascii.
 
